# word-embeddings

./: README.md  index.py  psql_vectors.py  pyproject.toml  requirements.txt  w2v_index.py
