[tool.poetry]
name = "word-embeddings"
version = "0.0.1"
description = ""
authors = ["Diego Pereira <diegop@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
tensorflow = {version = "2.15.0", extras = ["keras"]}
tqdm = "^4.66.2"
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
