[tool.poetry]
name = "word-embeddings"
version = "0.0.1"
description = ""
authors = ["Diego Pereira <diegop@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
tensorflow = {version = "2.15.0", extras = ["keras"]}
tqdm = "^4.66.2"
ipython = "^8.23.0"
annoy = "^1.17.3"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
pgvector = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
